Fix floating button z-index

--- a/styles.css
+++ b/styles.css
@@ -384,7 +384,7 @@ section:not(:first-of-type) {
     background-color: black;
 
     isolation: isolate;
-    z-index: 1;
+    z-index: 100;
 }
 
 .floating-button__center {
